--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-h1
-{
+h1 {
 color: blue;
 text-align: right
 background-color: red;
 }
 
-div
-{
+div {
   color: pink;
 }
 
-p
-{
+p {
   color: yellow;
 }
