--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ h1 {
 color: blue;
 text-indent: inherit;
 background-color: red;
-height: 200px;
-width: 300px;
+height: 50%;
+width: 50%;
 }
 
 div {
